--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,25 @@ website:
   title: "ISSS626-GAA"
   navbar:
     left:
+    - text: "Hands-on Exercise"
+      menu:
+        - text: "Hands-on Exercise 1a: Geospatial Data Wrangling with R"
+          href: "Hands-on_Ex/Hands-on_Ex01a/Hands-on_Ex01a.html"
+        - text: "Hands-on Exercise 1b: Choropleth Mapping with R"
+          href: "Hands-on_Ex/Hands-on_Ex01b/Hands-on_Ex01b.html"
+    - text: "In-class Exercise"
+      menu:
+        - text: "In-class Exercise 1"
+          href: "In-class_Ex/In-class_Ex01/In-class_Ex01.html"
+    - text: "Take-home Exercise"
+      menu:
+        - text: "Take-home Exercise 1"
+          href: "Take-home_Ex/Take-home_Ex01/Take-home_Ex01.html"
+        - text: "Take-home Exercise 2"
+          href: "Take-home_Ex/Take-home_Ex02/Take-home_Ex02.html"
+        - text: "Take-home Exercise 3"
+          href: "Take-home_Ex/Take-home_Ex03/Take-home_Ex03.html"
+    right: 
       - href: index.qmd
         text: Home
       - about.qmd
@@ -15,5 +34,5 @@ format:
     css: styles.css
     toc: true
 
-editor: visual
+editor: source
 
