Commit after completion of hands-on exercises for week 1 lesson.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,13 +8,19 @@ website:
     - text: "Hands-on Exercise"
       menu:
         - text: "Hands-on Exercise 1a: Geospatial Data Wrangling with R"
-          href: "Hands-on_Ex/Hands-on_Ex01a/Hands-on_Ex01a.html"
+          href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01a.html"
         - text: "Hands-on Exercise 1b: Choropleth Mapping with R"
-          href: "Hands-on_Ex/Hands-on_Ex01b/Hands-on_Ex01b.html"
+          href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01b.html"
+        - text: "Hands-on Exercise 2a: 1st Order Spatial Point Patterns Analysis Methods"
+          href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02a.html"
+        - text: "Hands-on Exercise 2b: 2nd Order Spatial Point Patterns Analysis Methods"
+          href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02b.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
           href: "In-class_Ex/In-class_Ex01/In-class_Ex01.html"
+        - text: "In-class Exercise 2"
+          href: "In-class_Ex/In-class_Ex02/In-class_Ex02.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
