commit after edit on take-home exercise 1 and uploading in-class exericse 5 file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,10 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
         - text: "Hands-on Exercise 4: Spatial Weights and Applications"
           href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html"
+        - text: "Hands-on Exercise 5a: Global Measures of Spatial Autocorrelation"
+          href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05a.html"
+        - text: "Hands-on Exercise 5b: Local Measures of Spatial Autocorrelation"
+          href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05b.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
@@ -29,6 +33,8 @@ website:
           href: "In-class_Ex/In-class_Ex03/In-class_Ex03.html"
         - text: "In-class Exercise 4"
           href: "In-class_Ex/In-class_Ex04/In-class_Ex04.html"
+        - text: "In-class Exercise 5"
+          href: "In-class_Ex/In-class_Ex05/In-class_Ex05.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
