Commit after updating in-class exercise 5, editing yml file and setting up in-class exercise 6

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05a.html"
         - text: "Hands-on Exercise 5b: Local Measures of Spatial Autocorrelation"
           href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05b.html"
+        - text: "Hands-on Exercise 6: Geographical Segmentation with Spatially Constrained Clustering Techniques"
+          href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
@@ -35,6 +37,8 @@ website:
           href: "In-class_Ex/In-class_Ex04/In-class_Ex04.html"
         - text: "In-class Exercise 5"
           href: "In-class_Ex/In-class_Ex05/In-class_Ex05.html"
+        - text: "In-class Exercise 6"
+          href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
@@ -52,12 +56,13 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
-    fontsize: 1.0em
+    fontsize: 1.2em
     toc-title: Table of Contents
     toc-depth: 4
     grid: 
-      sidebar-width: 200px
-      body-width: 850px
-      margin-width: 300px
+      sidebar-width: 100px
+      body-width: 1000px
+      margin-width: 250px
+
 
 editor: source
