--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,6 +25,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05b.html"
         - text: "Hands-on Exercise 6: Geographical Segmentation with Spatially Constrained Clustering Techniques"
           href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.html"
+        - text: "Hands-on Exercise 7: Geographically Weighted Regression"
+          href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
@@ -39,6 +41,8 @@ website:
           href: "In-class_Ex/In-class_Ex05/In-class_Ex05.html"
         - text: "In-class Exercise 6"
           href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
+        - text: "In-class Exercise 7"
+          href: "In-class_Ex/In-class_Ex07/In-class_Ex07.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
