commit for in-class exercise 7, set up of hands-on exercise 8 and take-home exercise 3

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.html"
         - text: "Hands-on Exercise 7: Geographically Weighted Regression"
           href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html"
+        - text: "Hands-on Exercise 8: Geographically Weighted Predictive Modelling"
+          href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
