--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,12 @@ website:
           href: "In-class_Ex/In-class_Ex06/In-class_Ex06.html"
         - text: "In-class Exercise 7"
           href: "In-class_Ex/In-class_Ex07/In-class_Ex07.html"
+        - text: "In-class Exercise 8"
+          href: "In-class_Ex/In-class_Ex08/In-class_Ex08.html"
+        - text: "In-class Exercise 9"
+          href: "In-class_Ex/In-class_Ex09/In-class_Ex09.html"
+        - text: "In-class Exercise 10"
+          href: "In-class_Ex/In-class_Ex10/In-class_Ex10.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
