--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,12 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html"
         - text: "Hands-on Exercise 8: Geographically Weighted Predictive Modelling"
           href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html"
+        - text: "Hands-on Exercise 9: Modelling Geographical Accessibility"
+          href: "Hands-on_Ex/Hands-on_Ex09/Hands-on_Ex09.html"
+        - text: "Hands-on Exercise 10a: Processing and Visualising Flow Data"
+          href: "Hands-on_Ex/Hands-on_Ex10/Hands-on_Ex10a.html"
+        - text: "Hands-on Exercise 10b: Calibrating Spatial Interaction Models with R"
+          href: "Hands-on_Ex/Hands-on_Ex10/Hands-on_Ex10b.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
@@ -47,6 +53,10 @@ website:
           href: "In-class_Ex/In-class_Ex07/In-class_Ex07.html"
         - text: "In-class Exercise 8"
           href: "In-class_Ex/In-class_Ex08/In-class_Ex08.html"
+        - text: "In-class Exercise 8: Take-home exercise 3b prep"
+          href: "In-class_Ex/In-class_Ex08/Take-home_Ex3b-HDBDataPrep.html"
+        - text: "In-class Exercise 8a: Supplement for Hands-on Exercise 8"
+          href: "In-class_Ex/In-class_Ex08/In-class_Ex08a.html"
         - text: "In-class Exercise 9"
           href: "In-class_Ex/In-class_Ex09/In-class_Ex09.html"
         - text: "In-class Exercise 10"
